# DarkMatter

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  LICENSE  README.md  app.c  app.h  build_all.bat  build_all.sh  build_all_linux.sh  build_all_mac.sh  build_linux.sh  build_mac.sh  build_win32.bat  camera.c  camera.h  compile_shaders.sh  components.c  components.h  debug_pixel.glsl  debug_pixel.hlsl  debug_render_pass.c  debug_render_pass.h  debug_vertex.glsl  debug_vertex.hlsl  dm.c  dm.h  dm_app_defines.h  dm_defines.h  dm_dx12.c  dm_glfw_window.c  dm_imgui.c  dm_impl.c  dm_impl.h  dm_intrinsics.h  dm_intrinsics256.h  dm_math.h  dm_math_defines.h  dm_math_types.h  (+46 more)
application/: CMakeLists.txt  build.sh  build_app.bat  build_app_linux.sh  build_app_mac.sh
application/src/: application.c  application.h  entry.c
assets/shaders/: dm_imgui.metal  dm_imgui_pixel.glsl  dm_imgui_pixel.hlsl  dm_imgui_vertex.glsl  dm_imgui_vertex.hlsl  pixel_shader.metal  vertex_shader.metal
engine/: CMakeLists.txt  build.sh  build_eng_linux.sh  build_eng_mac.sh  build_engine.bat  build_mac.sh
engine/include/DarkMatter/: DarkMatter.h
engine/lib/cgltf/: cgltf.h
engine/lib/glad/: CMakeLists.txt
engine/lib/glad/include/glad/: glad_wgl.h
engine/lib/glad/src/: glad_wgl.c
engine/lib/mt19937/include/mt19937/: mt19937.h  mt19937_64.h
engine/lib/mt19937/src/: mt19937.c  mt19937_64.c
engine/shaders/glsl/: light_src_pixel.glsl  light_src_vertex.glsl  material_color_pixel.glsl  material_color_vertex.glsl  material_pixel.glsl  material_vertex.glsl  new_shader_pixel.glsl  new_shader_vertex.glsl  object_pixel.glsl  object_vertex.glsl
engine/shaders/hlsl/: light_src_pixel.hlsl  light_src_vertex.hlsl  material_color_pixel.hlsl  material_color_vertex.hlsl  material_pixel.hlsl  material_vertex.hlsl  new_shader_pixel.hlsl  new_shader_vertex.hlsl  object_pixel.hlsl  object_vertex.hlsl
engine/shaders/metal/: light_src.metal  material.metal  material_color.metal  object.metal  object_shader.metal  shaders.air  shaders.metal  shaders.metallib  test.metal
engine/src/core/: dm_app_config.h  dm_camera_controller.c  dm_camera_controller.h  dm_defines.h  dm_engine.c  dm_engine.h  dm_engine_api.c  dm_engine_api.h  dm_engine_entry.h  dm_engine_types.h  dm_hash.c  dm_hash.h  dm_logger.c  dm_math.c  dm_math.h  dm_math_types.h  dm_mem.c  dm_mem.h  dm_random.c  dm_random.h  dm_string.h
engine/src/core/math/: dm_math.h  dm_math_mat2.c  dm_math_mat2.h  dm_math_mat3.c  dm_math_mat3.h  dm_math_mat4.c  dm_math_mat4.h  dm_math_mat_transforms.c  dm_math_mat_transforms.h  dm_math_misc.c  dm_math_misc.h  dm_math_quat.c  dm_math_quat.h  dm_math_types.h  dm_math_vec2.c  dm_math_vec2.h  dm_math_vec3.c  dm_math_vec3.h  dm_math_vec4.c  dm_math_vec4.h
engine/src/ecs/: dm_components.h  dm_ecs.c  dm_ecs.h  dm_systems.c  dm_systems.h
engine/src/input/: dm_input.c  dm_input.h  dm_keyboard.h  dm_mouse.h
engine/src/platform/: dm_platform.h  dm_platform_apple.h  dm_platform_apple.m  dm_platform_glfw.c  dm_platform_linux.c  dm_platform_win32.c  dm_platform_win32.h
engine/src/rendering/: dm_camera.c  dm_camera.h  dm_command_buffer.c  dm_command_buffer.h  dm_default_render_passes.h  dm_geometry.c  dm_geometry.h  dm_image.c  dm_image.h  dm_model.c  dm_model.h  dm_render_types.h  dm_renderer.c  dm_renderer.h  dm_renderer_OLD.h  dm_renderer_api.c  dm_renderer_api.h  dm_texture.c  dm_uniform.c  dm_uniform.h  dm_vertex_attribs.h  new_renderer.c
engine/src/rendering/directx/: dm_directx_buffer.c  dm_directx_buffer.h  dm_directx_depth_stencil.c  dm_directx_depth_stencil.h  dm_directx_device.c  dm_directx_device.h  dm_directx_enum_conversion.c  dm_directx_enum_conversion.h  dm_directx_renderer.c  dm_directx_renderer.h  dm_directx_rendertarget.c  dm_directx_rendertarget.h  dm_directx_shader.c  dm_directx_shader.h  dm_directx_swapchain.c  dm_directx_swapchain.h  dm_directx_texture.c  dm_directx_texture.h
engine/src/rendering/metal/: dm_metal_buffer.h  dm_metal_buffer.m  dm_metal_pipeline.h  dm_metal_pipeline.m  dm_metal_render_pass.h  dm_metal_render_pass.m  dm_metal_renderer.h  dm_metal_renderer.m  dm_metal_shader.h  dm_metal_shader.m  dm_metal_texture.h  dm_metal_texture.m  dm_metal_view.h  dm_metal_view.m  new_metal_renderer.m
engine/src/rendering/opengl/: dm_opengl_buffer.c  dm_opengl_buffer.h  dm_opengl_enum_conversion.c  dm_opengl_render_pass.c  dm_opengl_render_pass.h  dm_opengl_renderer.c  dm_opengl_renderer.h  dm_opengl_shader.c  dm_opengl_shader.h  dm_opengl_texture.c  dm_opengl_texture.h
engine/src/structures/: dm_byte_buffer.c  dm_byte_buffer.h  dm_list.c  dm_list.h  dm_map.c  dm_map.h  dm_slot_list.c  dm_slot_list.h
lib/: CMakeLists.txt  vma_usage.h
lib/glad/include/glad/: glad.h  glad_wgl.h
lib/glad/src/: glad.c  glad_wgl.c
lib/mt19937/: mt19937.h  mt19937_64.h
platform/: dm_platform_linux.c  dm_platform_mac.h  dm_platform_mac.m  dm_platform_win32.c  dm_platform_win32.h
rendering/: dm_renderer_dx11.c  dm_renderer_dx11.h  dm_renderer_dx12.c  dm_renderer_metal.m  dm_renderer_metal_old.m  dm_renderer_opengl.c  dm_renderer_vulkan.c
shaders/glsl/: object_pixel.glsl  object_vertex.glsl
shaders/hlsl/: object_pixel.cod  object_pixel.hlsl  object_vertex.cod  object_vertex.hlsl
src/: defines.h  dm_assert.h  dm_defines.h  dm_engine.c  dm_engine.h  dm_engine_entry.c  dm_engine_types.h  dm_event.c  dm_event.h  dm_logger.c  dm_logger.h  dm_math.h  dm_math_types.h  dm_mem.c  dm_mem.h  engine.c  engine.h  engine_types.h  main.c  mem.c  mem.h
src/core/: dm_assert.h  dm_defines.h  dm_engine.c  dm_engine.h  dm_engine_entry.c  dm_logger.h  dm_math.h  dm_math_types.h  dm_mem.c  dm_mem.h  dm_string.c  dm_string.h
src/input/: dm_input.h  dm_keyboard.h
src/platform/: dm_filesystem.c  dm_filesystem.h  dm_platform.h  dm_platform_apple.m  dm_platform_glfw.c  dm_platform_win32.c  dm_platform_win32.h  platform.h  platform_glfw.c
src/rendering/: dm_camera.c  dm_camera.h  dm_colors.h  dm_command_buffer.c  dm_command_buffer.h  dm_render_types.h  dm_renderer.c  dm_renderer.h  dm_texture.c  dm_texture.h  renderer.h
(+43 files in other folders)
