cmake_minimum_required(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 20)

PROJECT(VulkanMemoryAllocator)

FIND_PACKAGE(Vulkan REQUIRED)

ADD_LIBRARY(${PROJECT_NAME}
            vma_usage.cpp)

TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -Wno-nullability-completeness)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Vulkan_LIBRARIES})
